# python

./: Makefile  README.md  pyproject.toml  python.ipynb  python_1_fundamentals.ipynb  python_2_oops.ipynb  python_3_recursion.ipynb  python_5_linked_list.ipynb
0 Language Fundamentals/: main.py
01 Language Fundamentals/: main.py
02 Operators/: main.py
03 Control Flow Statements/: main.ipynb  main.py
04 Strings/: main.ipynb
deep learning/: 01_regression.ipynb  mnist.ipynb
oops/: 1.turtle.py
presentation/: presentation.ipynb
python_n/: python_1_fundamentals.ipynb  python_2_oops.ipynb  python_4_exception_handling.ipynb  python_5_linked_list.ipynb  python_6_stacks_queues.ipynb  python_7_binary_trees.ipynb
software engineering/: 0.basics.py
